--- a/.github/workflows/cli-lint.yml
+++ b/.github/workflows/cli-lint.yml
@@ -40,5 +40,5 @@ jobs:
         run: uv run ruff format --check
 
       - name: Type check with ty
-        run: uv ty check
+        run: uv run ty check
 
