--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,11 @@ BETTER_AUTH_URL= # Callback URL for signins
 # LLM providers
 OPENAI_API_KEY=sk-123456789
 ANTHROPIC_API_KEY=sk-123456789
+
+# Slack App
+SLACK_BOT_TOKEN=
+SLACK_POST_MESSAGE_URL=https://slack.com/api/chat.postMessage
+SLACK_SIGNING_SECRET=
+
+# Frontend Url
+REDIRECT_URL='http://localhost:3000/'
