--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,6 +29,7 @@
 		"@ai-sdk/anthropic": "^3.0.15",
 		"@ai-sdk/openai": "^3.0.1",
 		"@fastify/static": "^8.1.0",
+		"@slack/web-api": "^7.13.0",
 		"@trpc/server": "^11.8.1",
 		"@vscode/ripgrep": "^1.17.0",
 		"ai": "^6.0.3",
@@ -38,6 +39,7 @@
 		"drizzle-orm": "^0.45.1",
 		"fastify": "^5.6.2",
 		"fastify-plugin": "^5.1.0",
+		"fastify-raw-body": "^5.0.0",
 		"fastify-type-provider-zod": "^6.1.0",
 		"pg": "^8.16.3",
 		"postgres": "^3.4.8",
