--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -30,6 +30,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.545.0",
+		"proxy-from-env": "^1.1.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
 		"streamdown": "^2.0.1",
