Add a jaffleshop example for the context (#21)
* Add a jaffleshop example for the context

* fix linting

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ SLACK_SIGNING_SECRET=
 
 # Frontend Url
 REDIRECT_URL='http://localhost:3000/'
+
+# Context folder (to change for your setup)
+NAO_PROJECT_FOLDER=/Users/blef/Work/naolabs/chat/example
