--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -24,7 +24,7 @@ dependencies = [
     "pydantic>=2.10.0",
     "pyyaml>=6.0.0",
     "rich>=14.0.0",
-    "ibis-framework[bigquery]>=9.0.0",
+    "ibis-framework[bigquery,duckdb]>=9.0.0",
     "openai>=1.0.0",
     "fastapi>=0.128.0",
     "uvicorn>=0.40.0",
@@ -50,6 +50,7 @@ artifacts = ["nao_core/bin/**"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["nao_core"]
+exclude = ["**/example/**"]
 
 [tool.hatch.build.targets.sdist]
 include = [
@@ -57,6 +58,7 @@ include = [
     "README.md",
     "LICENSE",
 ]
+exclude = ["**/example/**"]
 
 [tool.ruff]
 line-length = 120
