--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,6 +22,7 @@
 		"@radix-ui/react-slot": "^1.2.4",
 		"@tailwindcss/vite": "^4.0.6",
 		"@tanstack/react-devtools": "^0.7.0",
+		"@tanstack/react-form": "^1.28.0",
 		"@tanstack/react-query": "^5.90.16",
 		"@tanstack/react-router": "^1.132.0",
 		"@tanstack/react-router-devtools": "^1.132.0",
