Implement posthog tracking in frontend and CLI (#105)
* Implement posthog tracking in frontend and CLI

* Use env vars in frontend and posthog context in CLI

* Fix API key not registered, remove posthog context and os related event properties

* Capture page view and session recordings

* Add posthog in backend:
- capture send message event
- export posthog service as class
- factorize node server start function

* Fix python imports

* Disable posthog session recording, fix pyproject posthog dependencies

* Hardcode tracking variables, add shared package/ in apps, implement MODE environnement for both python and node envs, rename package names

* update package-lock

* update bun.lock

* Read posthog variables from env if set

* Make frontend get posthog variables from backend to allow overrides

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,8 @@ SMTP_MAIL_FROM=
 SMTP_PASSWORD=
 
 NOTION_API_KEY=
+
+# Tracking (optional)
+POSTHOG_KEY=phc_123
+POSTHOG_HOST=https://eu.i.posthog.com
+POSTHOG_DISABLED=false # (used to opt-out of tracking)
