--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "backend",
+	"name": "@nao/backend",
 	"type": "module",
 	"exports": {
 		"./trpc": "./src/trpc/router.ts",
@@ -28,6 +28,7 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@nao/shared": "*",
 		"@ai-sdk/anthropic": "^3.0.15",
 		"@ai-sdk/google": "^3.0.16",
 		"@ai-sdk/mistral": "^3.0.13",
@@ -53,6 +54,7 @@
 		"postgres": "^3.4.8",
 		"react": "^19.2.4",
 		"react-dom": "^19.2.4",
+		"posthog-node": "^5.21.2",
 		"superjson": "^2.2.6",
 		"zod": "^4.2.1"
 	},
