--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "frontend",
+	"name": "@nao/frontend",
 	"private": true,
 	"type": "module",
 	"scripts": {
@@ -12,6 +12,8 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@nao/shared": "*",
+		"@nao/backend": "*",
 		"@ai-sdk/react": "^3.0.44",
 		"@radix-ui/react-accordion": "^1.2.12",
 		"@radix-ui/react-alert-dialog": "^1.1.15",
@@ -31,12 +33,12 @@
 		"@trpc/client": "^11.8.1",
 		"@trpc/tanstack-react-query": "^11.8.1",
 		"ai": "^6.0.42",
-		"backend": "*",
 		"better-auth": "^1.4.10",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"lucide-react": "^0.562.0",
+		"posthog-js": "^1.336.4",
 		"proxy-from-env": "^1.1.0",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
