--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "notion-client>=2.7.0",
     "notion2md>=2.9.0",
     "questionary>=2.1.0",
+    "posthog>=7.8.0",
 ]
 
 [project.optional-dependencies]
