--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
 	],
 	"scripts": {
 		"dev": "npm-run-all -lp dev:backend dev:frontend dev:fastapi",
-		"dev:backend": "npm run dev -w backend",
-		"dev:frontend": "npm run dev -w frontend",
-		"dev:fastapi": "npm run fastapi -w backend",
-		"lint": "npm run lint -w backend && npm run lint -w frontend",
-		"lint:fix": "npm run lint:fix -w backend && npm run lint:fix -w frontend",
+		"dev:backend": "npm run dev -w @nao/backend",
+		"dev:fastapi": "npm run fastapi -w @nao/backend",
+		"dev:frontend": "npm run dev -w @nao/frontend",
+		"lint": "npm run lint -w @nao/backend && npm run lint -w @nao/frontend && npm run lint -w @nao/shared",
+		"lint:fix": "npm run lint:fix -w @nao/backend && npm run lint:fix -w @nao/frontend && npm run lint:fix -w @nao/shared",
 		"format": "prettier --write .",
 		"format:check": "prettier --check .",
 		"cli:fix": "cd cli && make lint-fix",
