Refactor tools in backend and shared packages (#141)
* Refactor tools in backend and shared packages

* Rename tool-call -> tool-calls in frontend

--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -3,11 +3,15 @@
 	"private": true,
 	"type": "module",
 	"exports": {
-		"./posthog": "./src/posthog.ts"
+		"./posthog": "./src/posthog.ts",
+		"./tools": "./src/tools/index.ts"
 	},
 	"scripts": {
 		"lint": "tsc --noEmit && eslint",
 		"lint:fix": "eslint --fix",
 		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"zod": "^4.2.1"
 	}
 }
